@startuml

class Hecho {
     -id: Long
     -autor: Usuario
     -esValido: Boolean
     -datosHechos: DatosHechos
     -multimedia: List<Multimedia>
     -etiquetas: List<String>
     -colecciones: List<Coleccion>
     -handles: List<Handle>
     -origen: Origen
     -fuenteOrigen: FuenteOrigen
     -mostrarDatos: Boolean
     -fechaCreacion: LocalDateTime
     -plazoEdicion: Duration
     -esEditable: Boolean
     -esConsensuado: Boolean

     +normalizarHecho(): void
     +addColeccion(Coleccion): void


}
class Coleccion {
    -id: Long
    -titulo: String
    -descripcion: String
    -importadores: List<Fuente>
    -criteriosDePertenencia: List<CriterioDePertenencia>
    -handle: Handle
    -fechaYHoraDeActualizacion: LocalDateTime
    -consenso: IAlgoritmoDeConsenso

    +cumpleCriterios(Hecho): boolean
    +setCriteriosDePertenencia(List<CriterioDePertenencia>): void
    +agregarImportador(Fuente): void
}

interface IAlgoritmoDeConsenso {
    +consensuarhechos(hechos: List<Hecho>): List<Hecho>
}

class multiplesmenciones implements IAlgoritmoDeConsenso {
    +consensuarhechos(hechos: List<Hecho>): List<Hecho>
}

class mayoriaSimple implements IAlgoritmoDeConsenso {
    +consensuarhechos(hechos: List<Hecho>): List<Hecho>
}

class absoluta implements IAlgoritmoDeConsenso {
    +consensuarhechos(hechos: List<Hecho>): List<Hecho>
}






class Fuente{
    -webClient: WebClient
    +obtenerHechos(criterios: List<CriterioDePertenencia>)
}

class Importador{
    -pathArchivos: List<String>;
    -EstrategiaExtraccionHechos: EstrategiaExtraccionHechos
    +obtenerHechos(): map<String,Hecho>
    +csvExtractor(hechos, pathArchivos): FuenteEstatica
}


interface CriterioDePertenencia {
    +cumpleCriterio(hecho: Hecho): boolean
}


class CriterioPorFecha implements CriterioDePertenencia {
    -fechaInicio: LocalDate
    -fechaFin: LocalDate
    +cumpleCriterio(hecho: Hecho): boolean
}


class CriterioPorCategoria implements CriterioDePertenencia {
    -categoria: String
    +cumpleCriterio(hecho: Hecho): boolean
}


class CriterioPorUbicacion implements CriterioDePertenencia {
    -ubicacion: Ubicacion
    +cumpleCriterio(hecho: Hecho): boolean
}


 class Ubicacion {
   -id: Long
   -latitud: Double
   -longitud: Double
   -localidad: Localidad
 }

class Provincia {
    -id: Long
    -nombre: String

}

class Localidad {
    -id: Long
    -provincia: Provincia
    -nombre: String

}

class SolicitudEliminacion{

    -id:Long
    -hecho: Hecho
    -solicitante: Usuario
    -justificacion: String
    -fechaDeCreacion: LocalDateTime
    -justificacion: String
    -estados: List<EstadoSolicitud>

    +cambiarEstadoSolicitud(EstadoSolicitud): void
    -marcarComoSpam(): void
}


class EstadoSolicitud{
    -id: Long
    -evaluador: Usuario
    -estado: PosibleEstadoSolicitud
    -fechaDeCreacion: LocalDateTime
    -fechaDeCambio: LocalDateTime
    -spam: Boolean

    -calcularTiempoRespuesta(LocalDateTime, LocalDateTime)
}

enum PosibleEstadoSolicitud {
      PENDIENTE
      ACEPTADA
      RECHAZADA
}

class Handle{
-value: String
+equals()
+hashCode()
+toString(): String
}


class Categoria{
-nombre: String
}



class Multimedia{
    -urlImagen: string
}


enum OrigenHecho {
    CARGA_MANUAL
    DATASET
    CONTRIBUYENTE
}

enum TipoFuente{
PROXY,
DINAMICA,
ESTATICA
}





interface EstrategiaExtraccionHechos{
    +obtenerHechosDesde(pathArchivo): map<String,Hecho>
}


class EstrategiaExtraccionHechosCSV implements EstrategiaExtraccionHechos{
    +obtenerHechosDesde(pathArchivo): map<String,Hecho>
}


class Contribuyente{
   -nombre: String
   -apellido: String
   -fechaDeNacimiento: LocalDate
   +obtenerEdad(): Integer
}

class Administrador{
   -id: Long
   -nombre: String
}

interface IDetectorSpam{
+detectarSpam(justificacion: String)
}

class DetectorSpam implements IDetectorSpam{
+detectarSpam(justificacion: String)
}





    Hecho --> Categoria
    Hecho --> Ubicacion
    Hecho -->"*" Multimedia
    Hecho --> OrigenHecho
    Hecho --> TipoFuente
    Hecho --> "*"Coleccion
    Hecho -->"*" Handle

    Coleccion -->"*" Fuente
    Coleccion -->"*" CriterioDePertenencia
    SolicitudEliminacion --> Hecho
    SolicitudEliminacion --> Contribuyente
    Importador --> EstrategiaExtraccionHechos
    SolicitudEliminacion --> "*"EstadoSolicitud
    EstadoSolicitud --> PosibleEstadoSolicitud
    EstadoSolicitud --> Administrador
    Coleccion --> Handle
    Coleccion --> IAlgoritmoDeConsenso
    Ubicacion --> Localidad
    Localidad --> Provincia


@enduml